--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "index.js",
   "author": "Marcos Corsi <marcosvcorsi@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "tsnd --transpile-only --respawn --ignore-watchs node_modules"
+  },
   "devDependencies": {
     "@types/node": "^14.0.27",
+    "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   }
 }
