--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   }
