--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
   "scripts": {
     "dev": "tsnd --transpile-only --respawn --ignore-watchs node_modules"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "devDependencies": {
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
@@ -17,6 +24,7 @@
     "eslint-import-resolver-typescript": "^2.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.2.5",
     "prettier": "^2.0.5",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
