--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "class-methods-use-this": "off",
     "import/prefer-default-export": "off",
     "no-restricted-syntax": "off",
+    "max-classes-per-file": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
