--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@commitlint/config-conventional": "^9.1.1",
     "@types/jest": "^26.0.8",
     "@types/node": "^14.0.27",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
@@ -34,5 +35,8 @@
     "ts-jest": "^26.1.4",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "validator": "^13.1.1"
   }
 }
