--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.8",
     "@types/node": "^14.0.27",
     "@types/validator": "^13.1.0",
@@ -37,6 +38,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "validator": "^13.1.1"
   }
 }
