--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
+    "@shelf/jest-mongodb": "^1.2.2",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.8",
+    "@types/mongodb": "^3.5.25",
     "@types/node": "^14.0.27",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
@@ -39,6 +41,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "mongodb": "^3.6.0",
     "validator": "^13.1.1"
   }
 }
