--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.25",
     "@types/node": "^14.0.27",
     "@types/supertest": "^2.0.10",
@@ -47,6 +48,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fast-glob": "^3.2.4",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.0",
     "validator": "^13.1.1"
   }
