--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
     "class-methods-use-this": "off",
     "import/prefer-default-export": "off",
     "no-restricted-syntax": "off",
+    "no-useless-constructor": "off",
+    "no-empty-function": "off",
     "max-classes-per-file": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "import/extensions": [
