--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.0",
     "validator": "^13.1.1"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
