--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "rimraf dist && tsc",
     "start": "node dist/main/server.js",
+    "debug": "node --inspect=0.0.0.0:9222 --nolazy dist/main/server.js",
     "dev": "tsnd --transpile-only --respawn --ignore-watch node_modules src/main/server.ts",
     "up": "yarn build && docker-compose up -d",
     "test": "jest --silent --noStackTrace --passWithNoTests --runInBand",
