--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "node --inspect=0.0.0.0:9222 --nolazy dist/main/server.js",
     "dev": "tsnd --transpile-only --respawn --ignore-watch node_modules src/main/server.ts",
     "up": "yarn build && docker-compose up -d",
+    "down": "docker-compose down",
     "test": "jest --silent --noStackTrace --passWithNoTests --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "yarn test --watch -c jest-unit-config.js",
