--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc",
+    "build:debug": "tsc -w",
     "start": "node dist/main/server.js",
-    "debug": "node --inspect=0.0.0.0:9222 --nolazy dist/main/server.js",
+    "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "dev": "tsnd --transpile-only --respawn --ignore-watch node_modules src/main/server.ts",
     "up": "yarn build && docker-compose up -d",
     "down": "docker-compose down",
@@ -55,6 +56,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.0",
+    "nodemon": "^2.0.4",
     "validator": "^13.1.1"
   },
   "engines": {
