--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:integration": "yarn test --watch -c jest-integration-config.js ",
     "test:watch": "yarn test --watch",
     "test:staged": "yarn test --findRelatedTests",
-    "test:ci": "yarn test --coverage"
+    "test:ci": "yarn test --coverage",
+    "test:coveralls": "yarn test:ci && converalls < coverage/lcov.info"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
@@ -34,6 +35,7 @@
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
+    "coveralls": "^3.1.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
