fix: script coveralls

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:watch": "yarn test --watch",
     "test:staged": "yarn test --findRelatedTests",
     "test:ci": "yarn test --coverage",
-    "test:coveralls": "yarn test:ci && converalls < coverage/lcov.info"
+    "test:coveralls": "yarn test:ci && coveralls < coverage/lcov.info"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
