refactor: change TS paths to use alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,11 @@
     "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
-    "rootDir": "src"
+    "rootDir": "src",
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    }
   },
-  "include": ["src"],
-  "exclude": ["**/*.spec.ts", "**/*.test.ts"]
+  "include": ["src"]
 }
