--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Marcos Corsi <marcosvcorsi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
     "build:debug": "tsc -w",
     "start": "node dist/main/server.js",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
@@ -58,11 +58,15 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "mongodb": "^3.6.0",
     "nodemon": "^2.0.4",
     "validator": "^13.1.1"
   },
   "engines": {
     "node": "12.x"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
