--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/mongodb": "^3.5.25",
     "@types/node": "^14.0.27",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
@@ -61,6 +62,7 @@
     "module-alias": "^2.2.2",
     "mongodb": "^3.6.0",
     "nodemon": "^2.0.4",
+    "swagger-ui-express": "^4.1.4",
     "validator": "^13.1.1"
   },
   "engines": {
