--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@commitlint/config-conventional": "^9.1.1",
     "@shelf/jest-mongodb": "^1.2.2",
     "@types/bcrypt": "^3.0.0",
-    "@types/express": "^4.17.7",
+    "@types/express": "4.17.7",
     "@types/jest": "^26.0.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.25",
